--- a/css/paginaInicial.css
+++ b/css/paginaInicial.css
@@ -161,3 +161,21 @@ h2{
 
 /*Fim pessoas online*/
 
+.mensagens{
+    display: flex;
+    flex-direction: row;
+    padding-left: 30px;
+    align-items: center;
+}
+.foto-perfil{
+    width: 50px;
+    height: 50px;
+    border: 2px solid rgb(83, 240, 11);
+    background-image: url(../assets/pessoas-img/ahmed-elnokrashy-LYE99m0TMQU-unsplash.jpg);
+    background-size: cover;
+    border-radius: 50px;
+}
+
+.nome-msg{
+    padding: 20px;
+}
