--- a/css/paginaInicial.css
+++ b/css/paginaInicial.css
@@ -27,6 +27,7 @@
     width: 100%;
     align-items: center;
     justify-content: center;
+    padding-top: 70px;
 }
 
 .navBarBottom img{
@@ -165,11 +166,14 @@ h2{
     display: flex;
     flex-direction: row;
     padding-left: 30px;
+    padding-top: 20px;
     align-items: center;
+    border-top: 2px solid rgb(119, 115, 115);
+
 }
 .foto-perfil{
-    width: 50px;
-    height: 50px;
+    width: 80px;
+    height: 80px;
     border: 2px solid rgb(83, 240, 11);
     background-image: url(../assets/pessoas-img/ahmed-elnokrashy-LYE99m0TMQU-unsplash.jpg);
     background-size: cover;
@@ -178,4 +182,10 @@ h2{
 
 .nome-msg{
     padding: 20px;
+}
+
+.body-principal{
+   
+    background-color: black;
+    background-size: cover;
 }
